Revert "NAV - fix top left corner alignment (#60692)"
This reverts commit 77b368d63434fe07c5537d63bcb85ef9bb28ec91.

--- a/apps/src/templates/teacherDashboard/teacher-dashboard.module.scss
+++ b/apps/src/templates/teacherDashboard/teacher-dashboard.module.scss
@@ -71,7 +71,6 @@
 
 .emptyClassroomDiv {
   margin: 24px 64px 82px 64px;
-  text-align: center;
 }
 
 .header {
